# mini-ccrraafftt

./: CMakeLists.txt  CONTROLS.md  Makefile  README.md  run.sh
src/: PerlinNoise.cpp  PerlinNoise.h  camera.cpp  camera.h  genereu_world.cpp  input.cpp  input.h  main  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  simple_main.cpp  world.cpp  world.h
src/shaders/: fragment.glsl  simple.vert  vertex.glsl
